# aea-hackathon-rti

./: .gitignore  README.md  pyproject.toml
data/inputs/: example-mapping-file.csv
data/outputs/: adjacency_matrix.csv  adjacency_matrix.txt  heatmap.html  sample-bill.tsv
scripts/: debug_pdf.py  make_uuids.sh
src/aea_hackathon/: __init__.py  anonymize_bill_pdf.py  build_graph.py  extract_pdf_data.py  visualize_heatmap.py
tests/: conftest.py  test_heatmap.py
